[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rltools"
version = "1.2.3"
authors = [
  { name="Jonas Eschmann", email="jonas.eschmann@gmail.com" },
]
description = "A Python wrapper for RLtools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pybind11"
]

[project.optional-dependencies]
mkl = [
  "mkl",
  "mkl-include"
]
onnx = [
  "onnx"
]
tests = [
  "onnx",
  "torch"
]
learning-curves = [
  "stable-baselines3==2.3.0",
  "torch==2.2.1",
  "gymnasium[mujoco]==0.29.1",
]

[tool.hatch.build]
include = [
  "rltools/__init__.py",
  "rltools/interface/**",
  "rltools/src/**",
  "rltools/external/rl_tools/include/**"
]

[project.urls]
Homepage = "https://github.com/rl-tools/python-interface"
Issues = "https://github.com/rl-tools/python-interface/issues"
